# mobile-app-zernike-shape-signature

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/timer/moments/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: svm_model.json  svm_model.pkl
app/src/main/cpp/: CMakeLists.txt  Makefiles  main.cpp  native-lib.cpp  shape_classifier.cpp  shape_classifier.h  simple_json_parser.h
app/src/main/java/com/timer/moments/: ConfusionMatrixUtils.java  DrawView.java  MainActivity.java  ResultActivity.java  ShapeRecognizer.java
app/src/main/res/drawable/: gradient_header.xml
app/src/main/res/layout/: activity_main.xml  activity_result.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/timer/moments/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
